--- a/.github/workflows/naveen.yml
+++ b/.github/workflows/naveen.yml
@@ -18,6 +18,7 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: ./gradlew build
+
 
    
