--- a/.github/workflows/naveen.yml
+++ b/.github/workflows/naveen.yml
@@ -16,7 +16,7 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: ./gradlew build
+      run: mvn -B package --file pom.xml
 
 
    
