--- a/.github/workflows/naveen.yml
+++ b/.github/workflows/naveen.yml
@@ -19,6 +19,7 @@ jobs:
       run: mvn -B package --file pom.xml
   security-check: 
     runs-on: ubuntu-latest
+    needs: compile
 
     steps:
      - uses: actions/checkout@v4
