--- a/.github/workflows/naveen.yml
+++ b/.github/workflows/naveen.yml
@@ -38,6 +38,12 @@ jobs:
 
      - name: Gitleaks Code scan
        run: gitleaks detect source . -r gitleaks-report.json -f json
+    - name: deploy war to tomcat
+        run: | 
+                curl -v -u ${{ secrets.TOMCAT_USER }}:${{ secrets.TOMCAT_PASSWORD }} \
+                  -T target/TrainBook-1.0.0-SNAPSHOT.war \
+                  "http://${{ secrets.TOMCAT_HOST }}:8080/manager/text/deploy?path=/Naveen=true"
+
   
 
 
