Update deployment WAR file in GitHub Actions

--- a/.github/workflows/naveen.yml
+++ b/.github/workflows/naveen.yml
@@ -22,7 +22,7 @@ jobs:
     - name: deploy war to tomcat
       run: |  
                   curl -v -u ${{ secrets.TOMCAT_USER }}:${{ secrets.TOMCAT_PASSWORD }} \
-                  -T target/TrainBook-1.0.0-SNAPSHOT.war \
+                  -T target/naveen.war \
                   "http://${{ secrets.TOMCAT_HOST }}:8080/manager/text/deploy?path=/Naveen=true"
 
   
